--- a/scripts/envdat.Rmd
+++ b/scripts/envdat.Rmd
@@ -131,7 +131,7 @@ SST <- ggplot(subset(env, !is.na(meanSST)), aes(x = week, y = meanSST)) +
               axis.title.y = element_text(size = 10),
               panel.background = element_rect(fill = "white", colour = "grey50"),
               strip.background = element_blank(),
-              strip.text = element_blank(),
+              strip.text = element_text(size = 10),
               legend.title = element_blank(),
         legend.position = "bottom") +
   scale_x_continuous(limits = c(18, 28),
@@ -205,7 +205,7 @@ zoop_abund <- zoop_taxa %>%
   select(sample_id, site, date, abundance) %>%
   group_by(sample_id, site, date) %>%
   summarise(abundance = sum(abundance, na.rm = T)) %>%
-  filter(abundance > 0, site != "QU")
+  filter(abundance > 0, site != "QU39")
   
 zoop_data <- left_join(zoop_abund, zoop_biom) %>%
   filter(biomass != "NA")
@@ -307,7 +307,7 @@ zoop_size_biom_p <- ggplot(zoop_size_biom, aes(x = as.factor(week), y = biomass,
                      labels = c("May 1", "May 15", "June 1", "June 15", 
                                 "July 1", "July 15")) +
   scale_fill_manual(values = c("cadetblue1","cadetblue3","cadetblue4")) +
-  ylab(expression(atop("Prey Size Class", paste("% of Biomass")))) +
+  ylab(expression(atop("Prey Size Class", paste("Proportion of Biomass")))) +
   labs(fill = expression(Size~(mu*m)))
 zoop_size_biom_p
 
